[gd_scene load_steps=10 format=1]

[ext_resource path="res://src/scripts/endGame.gd" type="Script" id=1]
[ext_resource path="res://video/static/blood-splatter-on-black-background_rj7kqqsb__F0010.png" type="Texture" id=2]
[ext_resource path="res://video/static/title.png" type="Texture" id=3]
[ext_resource path="res://video/fonts/mindplay.fnt" type="BitmapFont" id=4]
[ext_resource path="res://audio/backToMenu.smp" type="Sample" id=5]
[ext_resource path="res://audio/gameStart.smp" type="Sample" id=6]
[ext_resource path="res://audio/menu.smp" type="Sample" id=7]
[ext_resource path="res://src/scripts/menuMusic.gd" type="Script" id=8]

[sub_resource type="SampleLibrary" id=1]

samples/backToMenu = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/gameStart = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/menu = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[node name="Panel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TextureFrame" type="TextureFrame" parent="Background"]

rect/scale = Vector2( 0.56, 0.56 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Main" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="UI" type="GridContainer" parent="Main"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 70.0
margin/right = 40.0
margin/bottom = 40.0
columns = 1

[node name="Logo" type="TextureFrame" parent="Main/UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 788.0
margin/bottom = 361.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="Score" type="Label" parent="Main/UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 365.0
margin/right = 788.0
margin/bottom = 539.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.96875, 0.30238, 0.041626, 1 )
text = "enemies killed:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayAgain" type="Button" parent="Main/UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 543.0
margin/right = 788.0
margin/bottom = 723.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.925781, 0.0289307, 0.0289307, 1 )
custom_colors/font_color = Color( 0.773438, 0.0574036, 0.0574036, 1 )
custom_colors/font_color_hover = Color( 0.371094, 0.0188446, 0.0188446, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play again"
flat = false

[node name="BackToMenu" type="Button" parent="Main/UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 727.0
margin/right = 788.0
margin/bottom = 907.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.855469, 0, 0, 1 )
custom_colors/font_color = Color( 0.757813, 0.0414429, 0.0414429, 1 )
custom_colors/font_color_hover = Color( 0.449219, 0.0315857, 0.0315857, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "back to menu"
flat = false

[node name="MenuMusic" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
script/script = ExtResource( 8 )


